cfn.yml
AWSTemplateFormatVersion: 2010-09-09

Description: |
  This CloudFormation Template was written for running Kittens Carousel Static Website on EC2. 
  Kittens Carousel Static Website will be deployed on Amazon Linux 2023 EC2 Instance with custom 
  security group which allows http connections on port 80 and ssh port 22 from anywhere. Kittens Carousel Static Website
  is downloaded from my Public Github repository, then deployed on Apache Web Server.

Parameters:
  
Resources: 
  
  LogicalID:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: "String"
      InstanceType: "String"
      KeyName: "String"
      SecurityGroupIds: 
        - "String"
      SecurityGroups: 
        - "String"
      Tags: 
        - Key: "Name"
          Value: !Sub web server of ${AWS::StackName} stack
      UserData: !Base64 |       
          #!/bin/bash
          dnf update -y
          dnf install -y httpd
          systemctl start httpd
          systemctl enable httpd
          cd /var/www/html/
          FOLDER="https://raw.githubusercontent.com/ilhanB/aws-kitten-ec2/refs/heads/main/static-web/"
          wget ${FOLDER}index.html
          wget ${FOLDER}cat0.jpg
          wget ${FOLDER}cat1.jpg
          wget ${FOLDER}cat2.jpg
    

  mySecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "allow ssh and http" # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0  
      Tags: 
        - Key: "Name"
          Value: "ilhan-kitten"
        - Key: "cohort"
          Value: "25"
    

Outputs:
  webSiteURL:
    Description: URL of website
    Value: !Sub
      - 
      -
